Fix hiding of anchor under navbar (#128)
* Fix hiding of anchor under navbar

Right now if you go to a link like:

https://networkservicemesh.io/events/nsmcon2019/#sponsors

The actual anchor is hidden under the navbar.

This fixes that issue for most anchors, but not the anchors to our
NSMCon talks because the anchors are enclosed in an element of type
flex, and so are not rendered as block elements.


* Fix anchors for our talk card elements as well.

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -89,3 +89,10 @@ $divider-font-size: $size-1
   -webkit-transform: translateY(-2.6rem)
   -ms-transform: translateY(-2.6rem)
   transform: translateY(-2.6rem)
+
+*[id]:before
+  display: block;
+  content: " ";
+  margin-top: -$navbar-height;
+  height: $navbar-height;
+  visibility: hidden;
